# TetrisForAI-Libtorch-C-

./: README.md  report.md  tetris
src/: CMakeLists.txt  DQN.hpp  block.qrc  draw.cpp  game.hpp  qt.cpp  qtDraw.hpp  test.cpp  tetris.cpp  tetris.hpp  train.cpp  train.hpp
trained_models/: tetris  tetris_conv1.pt  tetris_conv2.pt  tetris_conv3.pt
